--- a/public/styles/owl.carousel.css
+++ b/public/styles/owl.carousel.css
@@ -1,395 +1,224 @@
-.owl-carousel .owl-wrapper::after {
-  clear: both;
-  content: ".";
-  display: block;
-  height: 0;
-  line-height: 0;
-  visibility: hidden;
-}
+/**
+ * Owl Carousel v2.3.4
+ * Copyright 2013-2018 David Deutsch
+ * Licensed under: SEE LICENSE IN https://github.com/OwlCarousel2/OwlCarousel2/blob/master/LICENSE
+ */
+/*
+ *  Owl Carousel - Core
+ */
 .owl-carousel {
   display: none;
   width: 100%;
-  margin-top: -70px;
-}
-.owl-carousel .owl-wrapper {
-  display: none;
+  -webkit-tap-highlight-color: transparent;
+  /* position relative and z-index fix webkit rendering fonts issue */
   position: relative;
+  z-index: 1;
 }
-.owl-carousel .owl-wrapper-outer {
+.owl-carousel .owl-stage {
+  position: relative;
+  -ms-touch-action: pan-Y;
+  touch-action: manipulation;
+  -moz-backface-visibility: hidden;
+  /* fix firefox animation glitch */
+}
+.owl-carousel .owl-stage:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
+}
+.owl-carousel .owl-stage-outer {
+  position: relative;
   overflow: hidden;
-  position: relative;
-  width: 100%;
-  margin-left: -13px;
-  float: left;
-}
-.owl-carousel .owl-wrapper-outer.autoHeight {
-  transition: height 500ms ease-in-out 0s;
-}
-.owl-carousel .owl-item {
-  float: left;
-}
-.owl-controls {
-  -moz-user-select: none;
-}
-.grabbing {
-  cursor: url("grabbing.png") 8 8, move;
+  /* fix for flashing background */
+  -webkit-transform: translate3d(0px, 0px, 0px);
 }
 .owl-carousel .owl-wrapper,
 .owl-carousel .owl-item {
-  backface-visibility: hidden;
-  transform: translate3d(0px, 0px, 0px);
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
 }
-#owl-example .item {
-  border-radius: 3px;
-  margin: 10px;
-  padding: 30px 0;
-  text-align: center;
+.owl-carousel .owl-item {
+  position: relative;
+  min-height: 1px;
+  float: left;
+  -webkit-backface-visibility: hidden;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
 }
-#owl-example .item img {
+.owl-carousel .owl-item img {
   display: block;
-  margin: 0 auto;
-  width: auto;
-}
-#owl-example .item h3 {
-  font-size: 28px;
-  font-weight: 300;
-  margin: 25px 0 0;
-}
-#owl-example .item h1 {
-  font-size: 23px;
-}
-#owl-example .item .font40 {
-  font-size: 40px;
-}
-.owl-item .slidewrap {
-  padding-top: 60px;
   width: 100%;
-  float: left;
-  height: 83px;
 }
-.slidewrap {
-  padding-top: 10px;
-  padding-left: 15px;
-  width: 100%;
-  float: left;
-  height: 90px;
-}
-.owl-carousel .item h1 {
-  color: #0c2e61 !important;
-  float: left;
-  font-size: 28px;
-  width: 100%;
-  text-align: center;
-  font-family: "daxlinebold";
-}
-.owl-carousel .item h2 {
-  color: #0c2e61 !important;
-  float: left;
-  font-size: 27px;
-  font-weight: bold;
-  width: 100%;
-  text-align: center;
-  margin-top: 15px;
-  font-family: "daxlinebold";
-}
-.owl-carousel .item h3 {
-  color: #0c2e61 !important;
-  float: left;
-  font-size: 14px;
-  width: 100%;
-  text-align: center;
-}
-.lname {
-  font-weight: 700;
-  text-align: left;
-}
-.lname3 {
-  text-align: left;
+.owl-carousel .owl-nav.disabled,
+.owl-carousel .owl-dots.disabled {
   display: none;
 }
-.lname2 span {
-  font-size: 17px;
-}
-.item .font40 {
-  color: #242527;
-  font-family: "open_sansbold";
-  font-size: 35px;
-}
-.owl-item {
-}
-#owl-demo .item {
-  margin: 3px;
-}
-#owl-demo .item:hover {
-  background-color: #f5f5f5;
-  box-shadow: 0 6px 6px 0 rgba(50, 50, 50, 0.18);
-}
-.item_img {
-  float: left;
-  margin-top: 30px;
-  text-align: left;
-  width: 28%;
-}
-.owl-carousel .item_img img {
-  width: 80px;
-  position: absolute;
-  top: 20px;
-  bottom: 170px;
-  left: 0;
-  right: 0;
-  margin: auto;
-}
-.item .buy_button {
-  background: #5082c8;
-  color: #fff;
-  font-size: 13px;
-  font-family: "Robotomedium";
-  text-transform: none;
-  width: 85%;
-  border-radius: 3px 3px 3px 3px;
-  -moz-border-radius: 3px 3px 3px 3px;
-  -webkit-border-radius: 3px 3px 3px 3px;
-  border: 0px solid #000000;
-  margin-left: 20px;
-  text-align: center;
-}
-.item:hover .buy_button {
-  background: #0c2e61;
-}
-.owl-theme .owl-controls .owl-buttons div {
-}
-.owl-theme .owl-buttons i {
-  margin-top: 2px;
-}
-.owl-theme .owl-controls .owl-buttons div {
-  position: absolute;
-}
-.owl-buttons {
-}
-.owl-theme .owl-controls .owl-buttons .owl-prev {
-  background-image: url("../images/left_arrow.png");
-  background-position: left center;
-  background-repeat: no-repeat;
+.owl-carousel .owl-nav .owl-prev,
+.owl-carousel .owl-nav .owl-next,
+.owl-carousel .owl-dot {
   cursor: pointer;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.owl-carousel .owl-nav button.owl-prev,
+.owl-carousel .owl-nav button.owl-next,
+.owl-carousel button.owl-dot {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0 !important;
+  font: inherit;
+}
+.owl-carousel.owl-loaded {
   display: block;
-  left: -30px;
-  position: absolute;
-  top: 90px;
 }
-.owl-theme .owl-controls .owl-buttons .owl-next {
-  background-image: url(../images/right_arrow.png);
-  background-position: right center;
-  background-repeat: no-repeat;
-  cursor: pointer;
-  position: absolute;
-  right: -30px;
-  top: 90px;
+.owl-carousel.owl-loading {
+  opacity: 0;
+  display: block;
 }
-.row {
-  margin-left: 0;
+.owl-carousel.owl-hidden {
+  opacity: 0;
 }
-.row::before,
-.row::after {
-  content: "";
-  display: table;
-  line-height: 0;
+.owl-carousel.owl-refresh .owl-item {
+  visibility: hidden;
 }
-.row::after {
-  clear: both;
+.owl-carousel.owl-drag .owl-item {
+  -ms-touch-action: pan-y;
+  touch-action: pan-y;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
-[class*="span"] {
-  float: left;
-  min-height: 1px;
+.owl-carousel.owl-grab {
+  cursor: move;
+  cursor: grab;
 }
-.span12 {
-  width: 1000px;
+.owl-carousel.owl-rtl {
+  direction: rtl;
 }
-.icon-white,
-.nav-pills > .active > a > [class^="icon-"],
-.nav-pills > .active > a > [class*=" icon-"],
-.nav-list > .active > a > [class^="icon-"],
-.nav-list > .active > a > [class*=" icon-"],
-.navbar-inverse .nav > .active > a > [class^="icon-"],
-.navbar-inverse .nav > .active > a > [class*=" icon-"],
-.dropdown-menu > li > a:hover > [class^="icon-"],
-.dropdown-menu > li > a:focus > [class^="icon-"],
-.dropdown-menu > li > a:hover > [class*=" icon-"],
-.dropdown-menu > li > a:focus > [class*=" icon-"],
-.dropdown-menu > .active > a > [class^="icon-"],
-.dropdown-menu > .active > a > [class*=" icon-"],
-.dropdown-submenu:hover > a > [class^="icon-"],
-.dropdown-submenu:focus > a > [class^="icon-"],
-.dropdown-submenu:hover > a > [class*=" icon-"],
-.dropdown-submenu:focus > a > [class*=" icon-"] {
+.owl-carousel.owl-rtl .owl-item {
+  float: right;
 }
-[class^="icon-"],
-[class*=" icon-"] {
-  background-position: 14px 14px;
-  background-repeat: no-repeat;
-  display: inline-block;
-  height: 26px;
-  line-height: 26px;
-  margin-top: 4px;
-  vertical-align: text-top;
-  width: 25px;
-}
-.icon-chevron-left {
-  background-position: left top;
-}
-.icon-chevron-right {
-  background-position: right top;
-}
-@media (min-width: 1200px) {
-  .row {
-  }
-  .row::before,
-  .row::after {
-    content: "";
-    display: table;
-    line-height: 0;
-  }
-  .row::after {
-    clear: both;
-  }
-  [class*="span"] {
-    float: left;
-    margin-left: 0;
-    min-height: 1px;
-  }
-  .container,
-  .navbar-static-top .container,
-  .navbar-fixed-top .container,
-  .navbar-fixed-bottom .container {
-    width: 1000px;
-  }
-  .span12 {
-    width: 1000px;
-  }
-  .controls-row [class*="span"] + [class*="span"] {
-    margin-left: 30px;
-  }
-}
-@media (min-width: 981px) and (max-width: 1024px) {
-  .owl-theme .owl-controls .owl-buttons .owl-next {
-    right: 20px;
-  }
-  .owl-theme .owl-controls .owl-buttons .owl-prev {
-    left: 20px;
-  }
-}
-@media (min-width: 768px) and (max-width: 980px) {
-  .row {
-    margin-left: 0px;
-  }
-  .row::before,
-  .row::after {
-    content: "";
-    display: table;
-    line-height: 0;
-  }
-  .row::after {
-    clear: both;
-  }
-  [class*="span"] {
-    float: left; /*margin-left: 20px;*/
-    min-height: 1px;
-  }
-  .span12 {
-    width: 100%;
-  }
-  #owl-demo .item {
-    width: 90%;
-  }
-  .owl-theme .owl-controls .owl-buttons .owl-next {
-    right: 20px;
-  }
-  .owl-theme .owl-controls .owl-buttons .owl-prev {
-    left: 20px;
-  }
-  .slider_bg {
-    background-size: cover;
-  }
-}
-@media (min-width: 641px) and (max-width: 767px) {
-  .span12 {
-    width: 100%;
-  }
-  #owl-demo .item {
-    width: 90%;
-  }
 
-  /*.owl-theme .owl-controls .owl-buttons .owl-next { right:20px;}
-    .owl-theme .owl-controls .owl-buttons .owl-prev { left:20px;}*/
-  .owl-theme .owl-controls .owl-buttons .owl-next {
-    display: none;
+/* No Js */
+.no-js .owl-carousel {
+  display: block;
+}
+
+/*
+ *  Owl Carousel - Animate Plugin
+ */
+.owl-carousel .animated {
+  animation-duration: 1000ms;
+  animation-fill-mode: both;
+}
+
+.owl-carousel .owl-animated-in {
+  z-index: 0;
+}
+
+.owl-carousel .owl-animated-out {
+  z-index: 1;
+}
+
+.owl-carousel .fadeOut {
+  animation-name: fadeOut;
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
   }
-  .owl-theme .owl-controls .owl-buttons .owl-prev {
-    display: none;
-  }
-  .slider_bg {
-    background-size: cover;
+  100% {
+    opacity: 0;
   }
 }
-@media (min-width: 481px) and (max-width: 640px) {
-  .span12 {
-    width: 100%;
-  }
-  #owl-demo .item {
-    width: 90%;
-    margin: 5%;
-  }
-  .owl-theme .owl-controls .owl-buttons .owl-next {
-    display: none;
-  }
-  .owl-theme .owl-controls .owl-buttons .owl-prev {
-    display: none;
-  }
-  .slider_bg {
-    background-size: cover;
-  }
-  .owl-item {
-    padding-right: 0px;
-  }
+
+/*
+ * 	Owl Carousel - Auto Height Plugin
+ */
+.owl-height {
+  transition: height 500ms ease-in-out;
 }
-@media (min-width: 376px) and (max-width: 480px) {
-  .span12 {
-    width: 100%;
-  }
-  #owl-demo .item {
-    width: 90%;
-    margin: 5%;
-  }
-  .owl-theme .owl-controls .owl-buttons .owl-next {
-    display: none;
-  }
-  .owl-theme .owl-controls .owl-buttons .owl-prev {
-    display: none;
-  }
-  .slider_bg {
-    background-size: cover;
-  }
-  .owl-item {
-    padding-right: 0px;
-  }
+
+/*
+ * 	Owl Carousel - Lazy Load Plugin
+ */
+.owl-carousel .owl-item {
+  /**
+			This is introduced due to a bug in IE11 where lazy loading combined with autoheight plugin causes a wrong
+			calculation of the height of the owl-item that breaks page layouts
+		 */
 }
-@media (max-width: 375px) {
-  .span12 {
-    width: 100%;
-  }
-  #owl-demo .item {
-    width: 90%;
-    margin: 5%;
-  }
-  .owl-theme .owl-controls .owl-buttons .owl-next {
-    display: none;
-  }
-  .owl-theme .owl-controls .owl-buttons .owl-prev {
-    display: none;
-  }
-  .slider_bg {
-    background-size: cover;
-  }
-  .owl-item {
-    padding-right: 0px;
-  }
+.owl-carousel .owl-item .owl-lazy {
+  opacity: 0;
+  transition: opacity 400ms ease;
+}
+.owl-carousel .owl-item .owl-lazy[src^=""],
+.owl-carousel .owl-item .owl-lazy:not([src]) {
+  max-height: 0;
+}
+.owl-carousel .owl-item img.owl-lazy {
+  transform-style: preserve-3d;
+}
+
+/*
+ * 	Owl Carousel - Video Plugin
+ */
+.owl-carousel .owl-video-wrapper {
+  position: relative;
+  height: 100%;
+  background: #000;
+}
+
+.owl-carousel .owl-video-play-icon {
+  position: absolute;
+  height: 80px;
+  width: 80px;
+  left: 50%;
+  top: 50%;
+  margin-left: -40px;
+  margin-top: -40px;
+  background: url("owl.video.play.png") no-repeat;
+  cursor: pointer;
+  z-index: 1;
+  -webkit-backface-visibility: hidden;
+  transition: transform 100ms ease;
+}
+
+.owl-carousel .owl-video-play-icon:hover {
+  -ms-transform: scale(1.3, 1.3);
+  transform: scale(1.3, 1.3);
+}
+
+.owl-carousel .owl-video-playing .owl-video-tn,
+.owl-carousel .owl-video-playing .owl-video-play-icon {
+  display: none;
+}
+
+.owl-carousel .owl-video-tn {
+  opacity: 0;
+  height: 100%;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  transition: opacity 400ms ease;
+}
+
+.owl-carousel .owl-video-frame {
+  position: relative;
+  z-index: 1;
+  height: 100%;
+  width: 100%;
 }
