--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1746,21 +1746,10 @@ div#rp_nav {
   width: 605px;
   line-height: 40px;
 }
-.banner-buy-btn {
-  width: 182px;
-  height: 50px;
-  float: left;
-  margin-top: 55px;
-  background: #8bc53f;
-  color: white;
-  font-size: 27px;
-  text-align: center;
-  padding: 10px 5px 0 5px;
-  border-radius: 4px;
-}
+
 a.banner-buy-btn:hover {
   /*background: #5082c8;*/
-  background: #0df90d;
+  background-color: #00c38a;
   color: #ffffff;
 }
 .middle_part4 {
@@ -10340,22 +10329,16 @@ input:focus {
   margin-left: 30px;
 }
 .play-in-group-section .banner-buy-btn {
-  width: 182px;
-  height: 45px;
-  float: left;
-  color: white;
-  font-size: 30px;
-  text-align: center;
-  padding: 0px;
-  border-radius: 4px;
-  bottom: 0;
   position: absolute;
-  margin: 0 0 30px 30px;
-  background: #b4e391;
-  background: -moz-linear-gradient(top, #b4e391 15%, #61c419 55%);
-  background: -webkit-linear-gradient(top, #b4e391 15%, #61c419 55%);
-  background: linear-gradient(to bottom, #b4e391 15%, #61c419 55%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b4e391', endColorstr='#61c419', GradientType=0 );
+  font-size: 30px;
+  left: 30px;
+  top: 400px;
+  color: #fff;
+  background-color: #13d19c;
+  min-width: 180px;
+  padding: 12px;
+  text-align: center;
+  border-radius: 4px;
 }
 .lotteryresultslist-new li.block {
   background: white;
@@ -10483,6 +10466,7 @@ input:focus {
   display: inline-block;
   width: 100%;
   height: auto;
+  margin-top: 100px;
   margin-bottom: 20px;
 }
 .home-new-security-section .security-section-title {
@@ -11570,4 +11554,8 @@ li.lottary-play:hover .playlottary {
     box-shadow: 0em -3em 0 0, 2em -2em 0 -1em, 3em 0 0 -1em, 2em 2em 0 -1em,
       0 3em 0 -1em, -2em 2em 0 0, -3em 0em 0 0, -2em -2em 0 0.2em;
   }
+}
+
+button:focus {
+  outline: none !important;
 }
