--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -814,7 +814,7 @@ h4 {
   text-indent: -4000px;
 }
 #header .wrap-top-menu {
-  position: relative; /*background: #ffffff;*/ /* Old browsers */
+  position: relative;
   background: #0169b2;
   z-index: 999;
   width: 750px;
@@ -822,10 +822,12 @@ h4 {
   float: right;
 }
 #header .top-menu {
+  display: flex;
   float: left;
 }
 #header .top-menu li {
   float: left;
+  flex-shrink: 0;
   display: inline;
   height: 51px; /*border-top: 5px solid #fff;*/
   border-top: 5px solid #0169b2;
@@ -849,11 +851,9 @@ h4 {
   font-size: 16px; /*text-transform: uppercase;*/
   font-weight: normal;
   text-align: right;
-  float: left;
 }
 #header .top-menu li a:hover {
   text-decoration: none;
-  color: #000;
 }
 #header .current-menu-item a {
   color: #fff !important;
@@ -965,16 +965,7 @@ h4 {
   background: url(../images/signup1.png) no-repeat;
   margin-right: 5px;
 }
-#header .wrap-cta [class^="show-sign-"]:hover,
-[class*=" show-sign-"]:hover {
-  /* background: #5082c8; 
-    background: -moz-linear-gradient(top,  #5082c8 1%, #5082c8 100%); 
-    background: -webkit-linear-gradient(top,  #5082c8 1%,#5082c8 100%); 
-    background: linear-gradient(to bottom,  #5082c8 1%,#5082c8 100%); 
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5082c8', endColorstr='#5082c8',GradientType=0 );
-    border-top: 5px solid #0169b2;*/
-  color: #000;
-}
+
 #header .wrap-cta .show-sign-in {
   float: left;
   border-radius: 0px; /*margin: 0px -18px 0px 0px;*/
@@ -1193,26 +1184,6 @@ button.show-sign-in:hover {
   margin-top: 6px; /*border-top: 5px solid #0169b2;*/
   border: 1px solid #fff;
   border-radius: 4px;
-}
-#menu-item-1395:hover:before {
-  z-index: 10;
-  content: "";
-  position: absolute;
-  bottom: -5px;
-  left: -435px;
-  right: 235px; /* top: 0; */
-  background: url(../images/overlay_tip_icon.png) no-repeat 50% 0;
-  height: 9px;
-}
-#menu-item-1394:hover:before {
-  z-index: 10;
-  content: "";
-  position: absolute;
-  bottom: -5px;
-  left: -282px;
-  right: 235px; /* top: 0; */
-  background: url(../images/overlay_tip_icon.png) no-repeat 50% 0;
-  height: 9px;
 }
 .nav_dropdown ul {
   float: left;
@@ -6724,10 +6695,6 @@ input.css-checkbox[type="radio"] + label.css-label.clr {
   /* ------------------------------------------------------------ *\
       Header Style
     \* ------------------------------------------------------------ */
-  #header .top-menu li {
-    width: auto;
-    padding: 0 15px;
-  }
   .result_info {
     left: 0px;
   }
