--- a/pages/auth/auth.module.scss
+++ b/pages/auth/auth.module.scss
@@ -82,20 +82,20 @@
 
 .link {
   font-size: 16px;
-  color: #00c38a;
+  color: #0169b2;
   text-transform: uppercase;
 }
 
 .submit {
   text-align: center;
   padding: 8px;
-  border: 1px solid #00c38a;
+  border: 1px solid #0169b2;
   border-radius: 4px;
-  background-color: #00c38a;
+  background-color: #0169b2;
   width: 100% !important;
 
   &:hover {
-    background-color: #00d696;
+    background-color: #094f81;
     transition: ease-in-out 0.3s;
   }
 }
