--- a/pages/auth/login.module.scss
+++ b/pages/auth/login.module.scss
@@ -57,13 +57,13 @@
 
     & .link {
       font-size: 16px;
-      color: #00c38a;
+      color: #0169b2;
       text-transform: uppercase;
     }
 
     & .link:focus,
     .link:hover {
-      color: #00ac78 !important;
+      color: #04406b !important;
       transition: ease-in-out 0.3s;
     }
   }
